frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/it-project-backend-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_AWS_REGION
              value: ${AWS_ORIGIN}
            - name: REACT_APP_AWS_S3_ACCESS_KEY
              value: ${AWS_S3_ACCESS_KEY}
            - name: REACT_APP_AWS_S3_BUCKET_NAME
              value: ${AWS_S3_BUCKET_NAME}
            - name: REACT_APP_AWS_S3_SECRET_KEY
              value: ${AWS_S3_SECRET_KEY}
            - name: REACT_APP_BASE_URL
              value: ${BASE_URL:-"http://localhost:8080"}
            - name: REACT_APP_HOME
              value: ${REACT_APP_HOME:-"http://localhost:3000/"}
          image: react
          name: pets-home-frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
