it-project-backend-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: it-project-backend-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/it-project-backend-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/it-project-backend-default: "true"
